--- a/factoresestres/consecuencias.html
+++ b/factoresestres/consecuencias.html
@@ -41,6 +41,50 @@
         </header>
       </div>
 
+      <div class="container">
+        <section>
+          <h1>Estrés académico: causas y consecuencias</h1>
+          <br>
+          <p>Las principales consecuencias del estrés fueron, la falta de concentración, fatiga intelectual, inapetencia a las tareas habituales, descuido, fatiga sexual, tristeza, descenso del rendimiento intelectual o físico, nerviosismo, modificación de la frecuencia cardiaca, tensión arterial, metabolismo y actividad física.</p>
+          <br><br>
+          <p>las causas del estrés académico en estudiantes entre los que podemos mencionar:</p>
+          <li>Competitividad grupal.</li>
+          <li>Realización de un examen.</li>
+          <li>Sobrecargas de tareas.</li>
+          <li>Exposición de trabajos en clase.</li>
+          <li>Exceso de responsabilidad.</li>
+          <li>Intervención en el aula (responder a una pregunta del profesor,
+             realizar preguntas, participar en coloquios, etc.)</li>
+          <li>Subir al despacho del profesor en horas de tutorías.</li>
+          <li>Ambiente físico desagradable.</li>
+          <li>Sobrecarga académica (excesivo número de créditos, trabajos obligatorios, etc.)</li>
+          <li>Masificación de las aulas.</li>
+          <li>Tiempo limitado para hacer el trabajo.</li>
+          <li>Problemas o conflictos con los tutores.</li>
+          <li>Problemas o conflictos con tus compañeros.</li>
+          <li>Realización de trabajos obligatorios para aprobar 
+            las asignaturas (búsqueda de material necesario, redactar el trabajo, etc.)</li>
+          <li>Las evaluaciones.</li>
+          <li>La tarea de estudio.</li>
+          <li>Tipo de trabajo que se te pide</li>
+          <li>Trabajar en grupo.</li>
+          <br>
+
+          <p>
+            Las primeras consecuencias del estrés son pequeñas cosas sin mucha importancia, pero a las que conviene estar alerta para evitar que el problema siga creciendo se muestran a continuación:
+            <br><br>
+Falta de concentración, fatiga intelectual, inapetencia a las tareas habituales, descuidos.<br>
+Dificultad de recuperación, que produce un agotamiento constante. Se hace difícil levantarse por la mañana.<br>
+Descenso del rendimiento intelectual o físico, depresión, tristeza.<br>
+Fatiga sexual, descenso del deseo, dificultades en la erección y el orgasmo.<br>
+Nerviosismo, exceso de actividad, ansiedad, angustia. Impaciencia, irritabilidad. Se descarga la tensión al menor estímulo sin importancia.<br>
+Insomnio. Produce falta de descanso que agrava aún más la situación.<br>
+Acidez de estómago, indigestión, digestiones difíciles. Dolor de cabeza con excesiva frecuencia.<br>
+Tics y movimientos involuntarios. Tabletear sobre la mesa, dar vueltas a un bolígrafo, etc.<br>
+Dolores de espalda y cuello. La tensión se acumula sobre los músculos de la espalda.<br>
+          </p>
+        </section>
+      </div>
 <!--footer1-->
 <!--footer1-->
 <footer>
