--- a/factoresestres/factores.html
+++ b/factoresestres/factores.html
@@ -41,6 +41,11 @@
         </header>
       </div>
 
+      <div class="container">
+        <select>
+          <h1></h1>
+        </select>
+      </div>
 <!--footer1-->
 <!--footer1-->
 <footer>
