--- a/factoresestres/tratamientos.html
+++ b/factoresestres/tratamientos.html
@@ -40,7 +40,25 @@
       </nav>
     </header>
   </div>
+  <div class="container">
+    <select>
+      <h1>Tratamienos del estres </h1>
+      <h2>Encuentre técnicas saludables para manejar el estrés</h2>
+      <p>
+        Existen muchas maneras de manejar el estrés. Pruebe algunas para averiguar cuáles funcionan mejor para usted.
 
+Reconozca las cosas que no puede cambiar. 
+Haga ejercicio. 
+Cambie su perspectiva. 
+Haga algo que disfrute.
+Aprenda nuevas maneras para relajarse. 
+Conéctese con sus seres queridos. 
+Duerma lo suficiente. 
+Mantenga una dieta saludable. 
+Aprenda a decir que no. 
+      </p>
+    </select>
+  </div>
 <!--footer1-->
 <!--footer1-->
 <footer>
