--- a/factoresestres/consecuencias.html
+++ b/factoresestres/consecuencias.html
@@ -69,6 +69,7 @@
           <li>Tipo de trabajo que se te pide</li>
           <li>Trabajar en grupo.</li>
           <br>
+          <center><img src="prog/im.jfif" class="img-rounded" alt="estres"></center>
 
           <p>
             Las primeras consecuencias del estrés son pequeñas cosas sin mucha importancia, pero a las que conviene estar alerta para evitar que el problema siga creciendo se muestran a continuación:
