centrado y tabla con marco

--- a/factoresestres/tratamientos.html
+++ b/factoresestres/tratamientos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Carrusel con Bootstrap</title>
+  <title>Tratamientos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="">
@@ -9,12 +9,18 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+<style>
+  table,td{
+    border: 1px solid black;
+  }
+  td {padding: 5px;}
+</style>
 <body>
 
   <div>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#" style="padding: 1%;">Tratamientos/a>
+        <a class="navbar-brand" href="#" style="padding: 1%;">Tratamientos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,19 +49,64 @@
 
   <div class="container">
     <section>
-      <h1>Tratamienos del estres </h1>
+      <center><h1 >Tratamienos del estres </h1>
       <h2>Encuentre técnicas saludables para manejar el estrés</h2>
-      <p>Existen muchas maneras de manejar el estrés. Pruebe algunas para averiguar cuáles funcionan mejor para usted.<br>   
-        Reconozca las cosas que no puede cambiar. <br> 
-        Haga ejercicio. <br>
-        Cambie su perspectiva. <br>
-        Haga algo que disfrute.<br>
-        Aprenda nuevas maneras para relajarse. <br>
-        Conéctese con sus seres queridos. <br>
-        Duerma lo suficiente. <br>
-        Mantenga una dieta saludable. <br>
-        Aprenda a decir que no. <br>
-      </p>
+      <p>Existen muchas maneras de manejar el estrés. Pruebe algunas para averiguar cuáles funcionan mejor para usted.</p> 
+      <div>
+        <table style="width:70%; ",>
+          <tr>
+            <td>Reconozca las cosas que no puede cambiar.</td>
+            <td>Aceptar que no puede cambiar ciertas cosas le permite dejarlas ir y no alterarse. 
+              Por ejemplo, no puede cambiar el hecho de que debe conducir durante la hora pico. 
+              Pero puede buscar maneras de relajarse en el trayecto, como escuchar un podcast o un audiolibro.</td>
+            
+          </tr>
+          <tr>
+            <td>Haga ejercicio.</td>
+            <td> Realizar actividades físicas todos los días es la mejor y más fácil manera de lidiar con el estrés. 
+              Al hacer ejercicio, su cerebro libera químicos que lo hacen sentir bien. 
+              También puede ayudarle con su energía reprimida o su frustración. Busque algo que disfrute, ya sea caminar, montar en bicicleta, jugar softball, nadar o bailar, y hágalo por al menos 30 minutos la mayoría de los días.</td>
+          
+          </tr>
+          <tr>
+            <td>Cambie su perspectiva.</td>
+            <td>. Intente desarrollar una actitud más positiva ante los desafíos. 
+              Puede hacerlo reemplazando los pensamientos negativos con pensamientos más positivos. 
+              Por ejemplo, en lugar de pensar, "¿por qué siempre todo sale mal?", cambie esa idea por, "puedo encontrar una manera de superar esto". Puede parecer difícil o tonto en un principio, pero podría descubrir que esto le ayuda a dar un giro a su perspectiva.</td>
+          </tr>
+          <tr>
+            <td>Haga algo que disfrute.</td>
+            <td> Cuando el estrés lo tenga decaído, haga algo que disfrute para ayudar a ponerlo de pie de nuevo. 
+              Puede ser algo tan simple como leer un buen libro, escuchar música, ver su película favorita o salir a cenar con un amigo. O comience un nuevo pasatiempo o clase. Sin importar lo que elija, intente hacer al menos una cosa al día que sea solo para usted.</td>
+          </tr>
+          <tr>
+            <td>Aprenda nuevas maneras para relajarse.</td>
+            <td>La práctica de técnicas de relajación es una gran manera de lidiar con el estrés del día a día. 
+              Las técnicas de relajación le ayudan a disminuir el ritmo cardíaco y reducir la presión sanguínea. 
+              Existen muchos tipos, desde respiraciones profundas y meditación hasta yoga y taichí. Tome una clase o intente aprender de libros, videos o recursos en línea.</td>
+          </tr>
+          <tr>
+            <td>Conéctese con sus seres queridos.</td>
+            <td>No deje que el estrés se interponga entre usted y su vida social. Pasar tiempo con familiares y amigos puede ayudarle a sentirse mejor y olvidarse del estrés. Confiar sus problemas a un amigo también puede ayudarle a resolverlos.</td>
+          </tr>
+          <tr>
+            <td>Duerma lo suficiente.</td>
+            <td>Descansar suficientemente durante la noche puede ayudarle a pensar con más claridad y a tener más energía. 
+              Esto hará que sea más fácil manejar cualquier problema que pueda surgir. Intente dormir entre 7 y 9 horas todas las noches.</td>
+          </tr>
+          <tr>
+            <td>Mantenga una dieta saludable.</td>
+            <td> Comer alimentos saludables ayuda a darle energía a su cuerpo y su mente. 
+              Evite los refrigerios con altos contenidos de azúcar y consuma muchas verduras, frutas, granos integrales, lácteos reducidos o libres de grasas y proteínas magras.</td>
+          </tr>
+          <tr>
+            <td>Aprenda a decir que no.</td>
+            <td>Si su estrés viene de realizar demasiadas tareas en casa o en el trabajo, aprenda a establecer límites. 
+              Pida ayuda a los demás cuando la necesite.</td>
+          </tr>
+        </table>
+      </div>  
+    </center>
     </section>
   </div>
 <!--footer1-->
